fix light-dark mode

--- a/src/inject/injected.css
+++ b/src/inject/injected.css
@@ -35,6 +35,7 @@ html {
 
 #main {
   color: var(--text-primary);
+  padding-top: 5rem;
 }
 
 .forums {
@@ -143,7 +144,6 @@ ul.magicDelete > li.deleting {
   color: var(--text-color);
   border-right: none;
   font-family: Rubik, sans-serif !important;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   z-index: 11 !important;
 }
 
@@ -474,12 +474,31 @@ div > ol:has(.uiFileHandlerWrapper) {
   min-height: 8rem !important;
 }
 
-.student #menu > ul::before {
+/* .student #menu::before {
+  background: var(--better-main);
+  top: 0;
+  position: sticky;
+  height: 16px;
+} */
+
+/* .student #menu > ul::before {
   background-image: var(--betterseqta-logo);
-  position: -webkit-sticky; /* Safari */
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background-color: var(--better-main);
+  background-color: var(--background-primary);
+  height: 69.5px;
+  webkit-box-shadow: 0px 5px 16px 6px rgba(0, 0, 0, 0.2) !important;
+  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
+} */
+
+.student #menu > ul::before {
+  background: none;
+  height: 0;
+}
+
+.student #menu > ul {
+  margin-top: 70px;
 }
 
 .assessmentsWrapper .message {
@@ -586,6 +605,14 @@ div > ol:has(.uiFileHandlerWrapper) {
   --colour: unset;
 }
 
+/* #title span {
+  display: none;
+} */
+
+#editmenu {
+  display: none;
+}
+
 #title {
   background: var(--background-primary);
   color: var(--text-primary);
@@ -595,6 +622,10 @@ div > ol:has(.uiFileHandlerWrapper) {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   font-weight: 500 !important;
   z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .bg {
